# 06_homework

./: CMakeLists.txt  Dymamic_array.cpp  Dymamic_array.h  My_linear_array.cpp  My_linear_array.h  My_linear_array_one_way.cpp  My_linear_array_one_way.h  main.cpp
src/: Dynamic_array.cpp  Dynamic_array.h  My_linear_array.cpp  My_linear_array.h  My_linear_array_one_way.h  main.cpp
test/: My_Dynamic_array_test.cpp  My_linear_array_test.cpp
